added address by postcode

--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
         "style-loader": "^2.0.0",
         "webpack": "^5.36.2",
         "webpack-cli": "^4.6.0"
+    },
+    "dependencies": {
+        "dotenv": "^16.4.5"
     }
 }
